--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,6 +3,8 @@
 $off-black: #222622;
 $off-white: #a5afd7;
 $dark-blue: #333745;
+$light-blue: #464b5e;
+$blue: #423c51;
 $purple: #8357c5;
 
 // Spacing
