--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,5 +4,6 @@
 @import './components/container';
 @import './components/form';
 @import './components/header';
+@import './components/modal';
 @import './components/option';
 @import './components/widget';
